Fixed the position of the 'Copy Link' button when a cell is collapsed.
What
When hovering the mouse over a result cell with small width, the 'Copy Link' button was being displayed outside the cell.

Why
The button was hidden, when the table was displayed, its width was not considered in the cell width calculation.

How
A flex style is applied to the parent of the table cell elements to properly center the positioning of elements. Additionally, a span element is added after the 'Copy Link' button. The span is set with a min-width corresponding to the width of the 'Copy Link' button. When the mouse hovers over the cell, the 'Copy Link' button becomes visible, and the span invisible.

--- a/ontotext-yasgui-web-component/src/components/ontotext-yasgui-web-component/ontotext-yasgui-web-component.scss
+++ b/ontotext-yasgui-web-component/src/components/ontotext-yasgui-web-component/ontotext-yasgui-web-component.scss
@@ -450,9 +450,20 @@
       .dataTable tbody td div.triple-cell ul.triple-list li:hover .resource-copy-link,
       .dataTable td div.triple-cell div.triple-close:hover .resource-copy-link {
         display: inline;
-        padding-left: 4px;
-        padding-right: 10px;
-        position: absolute;
+      }
+
+      .dataTable tbody td div.uri-cell:hover,
+      .dataTable tbody td div.triple-cell ul.triple-list li:hover,
+      .dataTable td div.triple-cell div.triple-close:hover {
+        .spacer {
+          display: none;
+        }
+      }
+
+      .dataTable td div {
+        .spacer {
+          min-width: 1em;
+        }
       }
 
       .dataTable tbody td div.triple-cell ul.triple-list li {
@@ -462,6 +473,20 @@
       .dataTable td div.triple-cell .triple-link {
         color: #770088;
         text-decoration: none;
+      }
+
+      .dataTable tr td div {
+        display: flex;
+        justify-items: end;
+        align-items: center;
+      }
+
+      .dataTable.ellipseTable tr td div:not(.expanded) {
+        width: 100%;
+        .uri-link {
+          text-overflow: ellipsis;
+          overflow: hidden;
+        }
       }
 
       .uri-link:hover {
